--- a/new2.html
+++ b/new2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>HTML</title>
+    <title>康文昌的在线HTML 教学小工具</title>
     <style>  
       body {
         margin: 0;
@@ -13,10 +13,10 @@
   <body style="margin">
 	 <div style="
      background-color: #f1f1f1;
-     text-align: ;center
+     text-align: center;
      padding: 40px;
      ">
-     < img alt="刘" src="https://3wt.img.zhangtiandi.cn/2024/07-04/1debf5f543d2436ba1715c5e82f7c0173wcn561300.jpeg" width="80px" height="80px"">
+     <img alt="刘" src="https://3wt.img.zhangtiandi.cn/2024/07-04/1debf5f543d2436ba1715c5e82f7c0173wcn561300.jpeg" width="80px" height="80px"">
    </div>
    <div style="
      max-width: 760px;
@@ -25,9 +25,9 @@
      line-height: 1.7;
      text-align: center;
      ">
-     <p>第一个网站</p >
-     < img alt="景" src="https://tse1-mm.cn.bing.net/th/id/OIP-C.mH9YLFEL5YdVxJM82mjVJQAAAA?rs=1&pid=ImgDetMain" width="240px" height="180px">
-     <p>2024/07/04</p >
+     <p>第一个网站</p>
+     <img alt="景" src="https://tse1-mm.cn.bing.net/th/id/OIP-C.mH9YLFEL5YdVxJM82mjVJQAAAA?rs=1&pid=ImgDetMain" width="240px" height="180px">
+     <p>2024/07/04</p>
    </div>
    <div style="
      background-color: #f1f1f1;
@@ -35,8 +35,9 @@
      padding: 40px;
      font-size:12px;
      ">
-     <p>版权所有: liuchang.com</p >
-     <a href="https://liuchang.com">我的网站</p >
+     <p>版权所有: liuchang.com</p>
+     <a href="https://liuchang.com">我的网站</p>
      </div>
   </body>
 </html>
+
