--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      text-align: center;
      padding: 40px;
      ">
-     <img alt="刘" src="https://3wt.img.zhangtiandi.cn/2024/07-04/1debf5f543d2436ba1715c5e82f7c0173wcn561300.jpeg" width="80px" height="80px"">
+     <img alt="刘" src="http://d.0wd.cn/2maJR0" width="80px" height="80px"">
    </div>
    <div style="
      max-width: 760px;
