--- a/new.html
+++ b/new.html
@@ -6,12 +6,12 @@
     <title>桀桀桀</title>
     <style>  
       body {
-        margin: 3000;
-      }
+        margin: 3000; }
     </style>
   </head>
   <body style="margin:5000">
 <h1>新页面</h1>
+    <body style="margin=1000">
     <p>321</p>
   </body>
 </html>
