--- a/2.html
+++ b/2.html
@@ -4,14 +4,13 @@
 	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<title>神经资源管理器</title>
  <style>
- a{text-decoration:none}
+    body{
+      height:100vh;
+      background-color:red;}
  </style>
   </head>
   <body>	
-	<h1 style="color:red">大脑出现故障</h1>
-	<h3 style="color:blue">是否修复？</h3>  
- <a href="1.html">→是</a>
- <p>
- <a href="2.html">→否</a>
+	<h1>大脑停止运行</h1>
+	<h3 style="font-size:30px">已死亡</h3>  
   </body>
 </html>
