--- a/5.html
+++ b/5.html
@@ -8,7 +8,6 @@
   <div style="
   text-align:center">	
 	<b style="font-size:20px">PC端下载教程</b>
- <a href="">超链接</a>
-	<video src="https://v.douyin.com/iMVcK2xE/ 03/07 C@h.Ok anq:/ " height="200px" width="300px"controls></video>
+	<video src="" height="200px" width="300px"controls></video>
   </body>
 </html>
