--- a/5.html
+++ b/5.html
@@ -8,6 +8,6 @@
   <div style="
   text-align:center">	
 	<b style="font-size:20px">PC端下载教程</b>
-	<video src="" height="200px" width="300px"controls></video>
+	<video src="E:/HTML/001.mp4" height="200px" width="300px"controls></video>
   </body>
 </html>
