--- a/4.html
+++ b/4.html
@@ -17,6 +17,6 @@
  text-align:center">
  <a href="https://ys.mihoyo.com/"style="text-decoration:none">Android下载地址</a>
  <p>
- <a href="https://v.afbcs.cn/Fkyhhi"style="text-decoration:none">Windows下载教程</a>
+ <a href="5.html"style="text-decoration:none">Windows下载教程</a>
   </body>
 </html>
