--- a/5.html
+++ b/5.html
@@ -18,7 +18,7 @@
 	<b style="font-size: 30px;padding: 10px;border: 2px solid #b6f1ff;background-color: #7f7f7f;">PC端下载教程</b>
 <p> </p>
  
-	<video src="C:\Users\dd\Desktop\HTML/001.mp4" controls="" style="
+	<video src="001.mp4" controls="" style="
     height: 360px;
     text-align: center;
     width: 480px;
