--- a/5.html
+++ b/5.html
@@ -5,7 +5,7 @@
     margin: 30px;
 "><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	
-	<title>Windows</title>
+	<title>PC端下载教程</title>
   </head>
   <body>
   <div style="
