--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
  a{text-decoration:none}
  </style>
   </head>
-  <body>	
+  <body>
+	  <div style="
+		  text-align:center">
 	<h1>列表</h1>
     <a href="天空.html">天空</a>
     <p>
