--- a/天空.html
+++ b/天空.html
@@ -29,7 +29,7 @@
     border: 3px solid white;
     background-color: #d7d7d7;
 ">多云</h6>
-    <video src="C:\Users\dd\Desktop\HTML/002.mp4" controls="" style="
+    <video src="002.mp4" controls="" style="
     height:540px;
     width: 1080px;
     margin: 5px;
