--- a/0.html
+++ b/0.html
@@ -7,7 +7,9 @@
  a{text-decoration:none}
  </style>
   </head>
-  <body>	
+  <body>
+<div style="
+	text-align:center">
 	<h1 style="color:red">大脑出现故障</h1>
 	<h3 style="color:blue">是否修复？</h3>  
  <a href="1.html">→是</a>
