--- a/1.html
+++ b/1.html
@@ -5,6 +5,8 @@
 	<title>神经资源管理器</title>
   </head>
   <body>	
+	  <div style="
+		  text-align:center">
 	<h1 style="color:red">大脑修复中</h1>
 	<h3 style="color:blue">大脑未响应</h3> 
     <p style="font-size:10px">关闭此器官，会造成暴毙</p>
