--- a/2.html
+++ b/2.html
@@ -10,6 +10,8 @@
  </style>
   </head>
   <body>	
+	  <div style="
+		  text-align:center">
 	<h1>大脑停止运行</h1>
 	<h3 style="font-size:30px">已死亡</h3>  
   </body>
