--- a/3.html
+++ b/3.html
@@ -4,7 +4,9 @@
 	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<title>神经资源管理器</title>
   </head>
-  <body>	
+  <body>
+	  <div style="
+		  text-align:center">
 	<h1 style="color:red">大脑修复中</h1>
 	<h3 style="color:blue">大脑修复失败</h3>
     <p style="font-size:10px">请关闭器官↓</p> 
