--- a/2.html
+++ b/2.html
@@ -13,6 +13,7 @@
 	  <div style="
 		  text-align:center">
 	<h1>大脑停止运行</h1>
-	<h3 style="font-size:30px">已死亡</h3>  
+	<h3 style="font-size:30px">已死亡</h3> 
+        <audio src="大悲咒.MP3"autoplay>
   </body>
 </html>
