--- a/2.html
+++ b/2.html
@@ -14,6 +14,6 @@
 		  text-align:center">
 	<h1>大脑停止运行</h1>
 	<h3 style="font-size:30px">已死亡</h3> 
-        <audio src="大悲咒.MP3"autoplay>
+        <audio src="大悲咒.MP3"autoplay></audio>
   </body>
 </html>
