--- a/听.html
+++ b/听.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<title>歌曲</title>
+ <style>
+ a{text-decoration:none}
+ </style>
+  </head>
+  <body>
+<div style="
+	text-align:center">
+	<h1 style="color:red">音乐</h1>
+	<h3 style="color:blue">是否修复？</h3>  
+ <a href="1.html">→是</a>
+ <p>
+ <a href="2.html">→否</a>
+  </body>
+</html>
