--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 		  text-align:center">
 	<h1>列表</h1>
     <a href="天空.html">天空</a>
-    <p>
-	<a href="0.html">神经资源管理器</a>
+    <br>
+    <a href="0.html">神经资源管理器</a>
+    <br>
+    <a href="听.html">歌曲</a>
   </body>
 </html>
