--- a/听.html
+++ b/听.html
@@ -4,9 +4,9 @@
     background-color: #e3e3e3;
     border: 5px solid #818181;
     height: 100vh;
-    "><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	
-	<title>歌曲</title>
+    ">
+<head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>歌曲</title>
  <style>
  a{text-decoration:none}
  </style>
@@ -18,35 +18,34 @@
     height: 100px;
     background-color: #9b9b9b;
     justify-content: center;
-    align-items: center;
-"><h3 style="color: #211e1e;font-size: 30px;background-color: #d1d1d1;width: 160vh;height: 50px;margin: 0px;padding: 10px;border: 1px solid #00ffdc;text-align: center;justify-content: center;">音乐</h3></biaotilan>
+    align-items: center;">
+<h3 style="color: #211e1e;font-size: 30px;background-color: #d1d1d1;width: 160vh;height: 50px;margin: 0px;padding: 10px;border: 1px solid #00ffdc;text-align: center;justify-content: center;">音乐</h3></biaotilan>
     <zhuneirong style="
     margin: 20px;
     flex-direction: column;
     background-color: #b9b9b9;
     display: flex;
     justify-content: center;
-    align-items: center;
-">
-    <br>
-    <hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="file:///C:/Users/dd/Desktop/HTML/%E5%8E%8B%E7%BC%A9%E6%96%87%E4%BB%B6/%E7%94%BB%E5%BF%83.rar" class="liu"><b>画心</b></a>
-<audio src="画心.mp3" controls="" loop="" class="chang"></audio></hezi>
+    align-items: center;">
 <br>
 <hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="file:///C:/Users/dd/Desktop/HTML/%E5%8E%8B%E7%BC%A9%E6%96%87%E4%BB%B6/%E6%B5%AE%E8%AF%9B.rar" class="liu"><b>浮诛</b></a>
-<audio src="浮诛.mp3" controls="" loop="" class="chang"></audio></hezi><br><hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="file:///C:/Users/dd/Desktop/HTML/%E5%8E%8B%E7%BC%A9%E6%96%87%E4%BB%B6/%E5%A4%A7%E6%82%B2%E5%92%92.rar" class="liu"><b>大悲咒</b></a>
-<audio src="大悲咒.mp3" controls="" loop="" class="chang"></audio></hezi><br><hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="file:///C:/Users/dd/Desktop/HTML/%E5%8E%8B%E7%BC%A9%E6%96%87%E4%BB%B6/%E9%95%BF%E7%94%9F%E8%AF%80.rar" class="liu"><b>长生诀</b></a>
-<audio src="长生诀.mp3" controls="" loop="" class="chang"></audio></hezi>
+        <a href="../1/画心.rar" class="liu"><b>画心</b></a>
+<audio src="../1/画心.mp3" controls="" loop="" class="chang"></audio></hezi>
+<br>
+<hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="../1/浮诛.rar" class="liu"><b>浮诛</b></a>
+<audio src="../1/浮诛.mp3" controls="" loop="" class="chang"></audio></hezi><br><hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="../1/大悲咒.rar" class="liu"><b>大悲咒</b></a>
+<audio src="../1/大悲咒.mp3" controls="" loop="" class="chang"></audio></hezi><br><hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="../1/长生诀.rar" class="liu"><b>长生诀</b></a>
+<audio src="../1/长生诀.mp3" controls="" loop="" class="chang"></audio></hezi>
 <br><hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="file:///C:/Users/dd/Desktop/HTML/%E5%8E%8B%E7%BC%A9%E6%96%87%E4%BB%B6/%E7%90%B5%E7%90%B6%E8%A1%8C.rar" class="liu"><b>琵琶行</b></a>
-<audio src="琵琶行.mp3" controls="" loop="" class="chang"></audio></hezi><br><hezi>&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="file:///C:/Users/dd/Desktop/HTML/%E5%8E%8B%E7%BC%A9%E6%96%87%E4%BB%B6/%E6%B2%99%E6%BC%A0%E9%AA%86%E9%A9%BC.rar" class="liu"><b>沙漠骆驼</b></a>
-<audio src="沙漠骆驼.mp3" controls="" loop="" class="chang"></audio></hezi><br>
-        <hezi><a href="file:///C:/Users/dd/Desktop/HTML/%E5%8E%8B%E7%BC%A9%E6%96%87%E4%BB%B6/%E5%8D%81%E5%B9%B4%E4%BA%BA%E9%97%B4DJ.rar" class="liu"><b>十年人间DJ</b></a>
-<audio src="十年人间DJ.mp3" controls="" loop="" class="chang"></audio></hezi><br>
+        <a href="../1/琵琶行.rar" class="liu"><b>琵琶行</b></a>
+<audio src="../1/琵琶行.mp3" controls="" loop="" class="chang"></audio></hezi><br><hezi>&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="../1/沙漠骆驼.rar" class="liu"><b>沙漠骆驼</b></a>
+<audio src="../1/沙漠骆驼.mp3" controls="" loop="" class="chang"></audio></hezi><br>
+        <hezi><a href="../1/十年人间DJ.rar" class="liu"><b>十年人间DJ</b></a>
+<audio src="../1/十年人间DJ.mp3" controls="" loop="" class="chang"></audio></hezi><br>
         <hezi>
 </hezi><br></zhuneirong>
 <br>
