--- a/听.html
+++ b/听.html
@@ -30,22 +30,22 @@
 <br>
 <hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="../1/画心.rar" class="liu"><b>画心</b></a>
-<audio src="../1/画心.mp3" controls="" loop="" class="chang"></audio></hezi>
+<audio src="../1/画心.mp3" controls="" loop="" preload class="chang"></audio></hezi>
 <br>
 <hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="../1/浮诛.rar" class="liu"><b>浮诛</b></a>
-<audio src="../1/浮诛.mp3" controls="" loop="" class="chang"></audio></hezi><br><hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<audio src="../1/浮诛.mp3" controls="" loop=""preload  class="chang"></audio></hezi><br><hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="../1/大悲咒.rar" class="liu"><b>大悲咒</b></a>
-<audio src="../1/大悲咒.mp3" controls="" loop="" class="chang"></audio></hezi><br><hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<audio src="../1/大悲咒.mp3" controls="" loop=""preload  class="chang"></audio></hezi><br><hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="../1/长生诀.rar" class="liu"><b>长生诀</b></a>
-<audio src="../1/长生诀.mp3" controls="" loop="" class="chang"></audio></hezi>
+<audio src="../1/长生诀.mp3" controls="" loop="" preload class="chang"></audio></hezi>
 <br><hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="../1/琵琶行.rar" class="liu"><b>琵琶行</b></a>
-<audio src="../1/琵琶行.mp3" controls="" loop="" class="chang"></audio></hezi><br><hezi>&nbsp;&nbsp;&nbsp;&nbsp;
+<audio src="../1/琵琶行.mp3" controls="" loop=""preload  class="chang"></audio></hezi><br><hezi>&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="../1/沙漠骆驼.rar" class="liu"><b>沙漠骆驼</b></a>
-<audio src="../1/沙漠骆驼.mp3" controls="" loop="" class="chang"></audio></hezi><br>
+<audio src="../1/沙漠骆驼.mp3" controls="" loop=""preload  class="chang"></audio></hezi><br>
         <hezi><a href="../1/十年人间DJ.rar" class="liu"><b>十年人间DJ</b></a>
-<audio src="../1/十年人间DJ.mp3" controls="" loop="" class="chang"></audio></hezi><br>
+<audio src="../1/十年人间DJ.mp3" controls="" loop=""preload  class="chang"></audio></hezi><br>
         <hezi>
 </hezi><br></zhuneirong>
 <br>
