--- a/听.html
+++ b/听.html
@@ -36,7 +36,7 @@
         <a href="../1/浮诛.rar" class="liu"><b>浮诛</b></a>
 <audio src="../1/浮诛.mp3" controls="" loop="" preload="" class="chang"></audio></hezi><br><hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="../1/大悲咒.rar" class="liu"><b>大悲咒</b></a>
-<audio src="../1/大悲咒.mp3" controls="" loop="" preload="" class="chang"></audio></hezi><br><hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<audio src="大悲咒.mp3" controls="" loop="" preload="" class="chang"></audio></hezi><br><hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="../1/长生诀.rar" class="liu"><b>长生诀</b></a>
 <audio src="../1/长生诀.mp3" controls="" loop="" preload="" class="chang"></audio></hezi>
 <br><hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
