--- a/听.html
+++ b/听.html
@@ -29,23 +29,23 @@
     align-items: center;">
 <br>
 <hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="../1/画心.rar" class="liu"><b>画心</b></a>
-<audio src="../1/画心.mp3" controls="" loop="" preload="" class="chang"></audio></hezi>
+        <a href="画心.rar" class="liu"><b>画心</b></a>
+<audio src="画心.mp3" controls="" loop="" preload="" class="chang"></audio></hezi>
 <br>
 <hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="../1/浮诛.rar" class="liu"><b>浮诛</b></a>
-<audio src="../1/浮诛.mp3" controls="" loop="" preload="" class="chang"></audio></hezi><br><hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="../1/大悲咒.rar" class="liu"><b>大悲咒</b></a>
+        <a href="浮诛.rar" class="liu"><b>浮诛</b></a>
+<audio src="浮诛.mp3" controls="" loop="" preload="" class="chang"></audio></hezi><br><hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="大悲咒.rar" class="liu"><b>大悲咒</b></a>
 <audio src="大悲咒.mp3" controls="" loop="" preload="" class="chang"></audio></hezi><br><hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="../1/长生诀.rar" class="liu"><b>长生诀</b></a>
-<audio src="../1/长生诀.mp3" controls="" loop="" preload="" class="chang"></audio></hezi>
+        <a href="长生诀.rar" class="liu"><b>长生诀</b></a>
+<audio src="长生诀.mp3" controls="" loop="" preload="" class="chang"></audio></hezi>
 <br><hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="../1/琵琶行.rar" class="liu"><b>琵琶行</b></a>
-<audio src="../1/琵琶行.mp3" controls="" loop="" preload="" class="chang"></audio></hezi><br><hezi>&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="../1/沙漠骆驼.rar" class="liu"><b>沙漠骆驼</b></a>
-<audio src="../1/沙漠骆驼.mp3" controls="" loop="" preload="" class="chang"></audio></hezi><br>
-        <hezi><a href="../1/十年人间DJ.rar" class="liu"><b>十年人间DJ</b></a>
-<audio src="../1/十年人间DJ.mp3" controls="" loop="" preload="" class="chang"></audio></hezi><br>
+        <a href="琵琶行.rar" class="liu"><b>琵琶行</b></a>
+<audio src="琵琶行.mp3" controls="" loop="" preload="" class="chang"></audio></hezi><br><hezi>&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="沙漠骆驼.rar" class="liu"><b>沙漠骆驼</b></a>
+<audio src="沙漠骆驼.mp3" controls="" loop="" preload="" class="chang"></audio></hezi><br>
+        <hezi><a href="十年人间DJ.rar" class="liu"><b>十年人间DJ</b></a>
+<audio src="十年人间DJ.mp3" controls="" loop="" preload="" class="chang"></audio></hezi><br>
         <hezi>
 </hezi><br></zhuneirong>
 <br>
