--- a/天空.html
+++ b/天空.html
@@ -21,14 +21,16 @@
     border: 5px solid black;
     background-color: #5b5b5b;
 ">天气</h1>
-      <h6 style="
-    color: black;
+     <a href="002.mp4" download="天空.mp4">
+    <h6 style="
+    color: rgb(62, 33, 228);
     font-size:20px;
     margin: -8px;
     padding:0px;
-    border: 3px solid white;
-    background-color: #d7d7d7;
+    border: 3px solid rgb(255, 255, 255);
+    background-color: #888888;
 ">多云</h6>
+  </a>
     <video src="002.mp4" controls="" style="
     height:540px;
     width: 720px;
