--- a/5.html
+++ b/5.html
@@ -14,8 +14,9 @@
   padding: 60px;
   background-color: #a1a1a1;
   ">	
-	<b style="font-size: 30px;padding: 10px;border: 2px solid #b6f1ff;background-color: #7f7f7f;">PC端下载教程</b>
-<p> </p>
+	<a href="视频/001.mp4" download="在便携式个人微机中下载原神.mp4"><b
+        style="font-size: 30px;padding: 10px;border: 2px solid #b6f1ff;background-color: #7f7f7f;">PC端下载教程</b></a>
+<br>
  	<video src="001.mp4" controls="" style="
     height: 360px;
     text-align: center;
