--- a/听.html
+++ b/听.html
@@ -1,64 +1,102 @@
 <!DOCTYPE html>
 <!-- saved from url=(0047)file:///C:/Users/dd/Desktop/HTML/%E5%90%AC.html -->
-<html style="
-    background-color: #e3e3e3;
-    border: 5px solid #818181;
-    height: 100vh;
-    ">
-<head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>歌曲</title>
- <style>
- a{text-decoration:none}
- </style>
-  </head>
-  <body>
-    <div style="text-align:center">
-<biaotilan style="
-    display: flex;
-    height: 100px;
-    background-color: #9b9b9b;
-    justify-content: center;
-    align-items: center;">
-<h3 style="color: #211e1e;font-size: 30px;background-color: #d1d1d1;width: 160vh;height: 50px;margin: 0px;padding: 10px;border: 1px solid #00ffdc;text-align: center;justify-content: center;">音乐</h3></biaotilan>
+<html style="background-color: #e3e3e3; border: 5px solid #818181; height: 100vh">
+
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
+  <title>歌曲</title>
+  <style>
+    a {
+      text-decoration: none;
+    }
+  </style>
+</head>
+
+<body>
+  <div style="text-align: center">
+    <biaotilan style="
+          display: flex;
+          height: 100px;
+          background-color: #9b9b9b;
+          justify-content: center;
+          align-items: center;
+        ">
+      <h3 style="
+            color: #211e1e;
+            font-size: 30px;
+            background-color: #d1d1d1;
+            width: 160vh;
+            height: 50px;
+            margin: 0px;
+            padding: 10px;
+            border: 1px solid #00ffdc;
+            text-align: center;
+            justify-content: center;
+          ">
+        音乐
+      </h3>
+    </biaotilan>
     <zhuneirong style="
-    margin: 20px;
-    flex-direction: column;
-    background-color: #b9b9b9;
-    display: flex;
-    justify-content: center;
-    align-items: center;">
-<br>
-<hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="画心.rar" class="liu"><b>画心</b></a>
-<audio src="画心.mp3" controls="" loop="" preload="" class="chang"></audio></hezi>
-<br>
-<hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="浮诛.rar" class="liu"><b>浮诛</b></a>
-<audio src="浮诛.mp3" controls="" loop="" preload="" class="chang"></audio></hezi><br><hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="大悲咒.rar" class="liu"><b>大悲咒</b></a>
-<audio src="大悲咒.mp3" controls="" loop="" preload="" class="chang"></audio></hezi><br><hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="长生诀.rar" class="liu"><b>长生诀</b></a>
-<audio src="长生诀.mp3" controls="" loop="" preload="" class="chang"></audio></hezi>
-<br><hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="琵琶行.rar" class="liu"><b>琵琶行</b></a>
-<audio src="琵琶行.mp3" controls="" loop="" preload="" class="chang"></audio></hezi><br><hezi>&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="沙漠骆驼.rar" class="liu"><b>沙漠骆驼</b></a>
-<audio src="沙漠骆驼.mp3" controls="" loop="" preload="" class="chang"></audio></hezi><br>
-        <hezi><a href="十年人间DJ.rar" class="liu"><b>十年人间DJ</b></a>
-<audio src="十年人间DJ.mp3" controls="" loop="" preload="" class="chang"></audio></hezi><br>
-        <hezi>
-</hezi><br></zhuneirong>
-<br>
-<style>.liu{
-    color:#ffffff;
-    font-size:20px;
-    background-color:#000000;
-    margin:10px;
-    border:1px solid #ffffff}
-.chang{
-    width: 600px;
-    height: 20px;
-    padding: 0px;
-    margin: -2px;}
-</style>
-</div></body></html>
+          margin: 20px;
+          flex-direction: column;
+          background-color: #b9b9b9;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        ">
+      <br />
+      <hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="画心.mp3" download="画心.mp3" class="liu"><b>画心</b></a>
+        <audio src="画心.mp3" controls="" loop="" class="chang"></audio>
+      </hezi>
+      <br />
+      <hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="浮诛.mp3" download="浮诛.mp3" class="liu"><b>浮诛</b></a>
+        <audio src="浮诛.mp3" controls="" loop="" class="chang"></audio>
+      </hezi>
+      <br />
+      <hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="大悲咒.mp3" download="大悲咒.mp3" class="liu"><b>大悲咒</b></a>
+        <audio src="大悲咒.mp3" controls="" loop="" class="chang"></audio>
+      </hezi>
+      <br />
+      <hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="长生诀.mp3" download="长生诀.mp3" class="liu"><b>长生诀</b></a>
+        <audio src="长生诀.mp3" controls="" loop="" class="chang"></audio>
+      </hezi>
+      <br />
+      <hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href=音频/琵琶行.mp3" download="琵琶行.mp3" class="liu"><b>琵琶行</b></a>
+        <audio src="琵琶行.mp3" controls="" loop="" class="chang"></audio>
+      </hezi><br />
+      <hezi>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="沙漠骆驼.mp3" download="沙漠骆驼.mp3" class="liu"><b>沙漠骆驼</b></a>
+        <audio src="沙漠骆驼.mp3" controls="" loop="" class="chang"></audio>
+      </hezi><br />
+      <hezi><a href="十年人间DJ.mp3" download="十年人间DJ.mp3" class="liu"><b>十年人间DJ</b></a>
+        <audio src="十年人间DJ.mp3" controls="" loop="" class="chang"></audio>
+      </hezi>
+      <br />
+    </zhuneirong>
+    <br />
+    <style>
+      .liu {
+        color: #ffffff;
+        font-size: 20px;
+        background-color: #000000;
+        margin: 10px;
+        border: 1px solid #ffffff;
+      }
+
+      .chang {
+        width: 600px;
+        height: 20px;
+        padding: 0px;
+        margin: -2px;
+      }
+    </style>
+  </div>
+</body>
+
+</html>
