--- a/听.html
+++ b/听.html
@@ -21,6 +21,7 @@
           background-color: #9b9b9b;
           justify-content: center;
           align-items: center;
+          border: 3px solid rgb(68, 68, 68);
         ">
       <h3 style="
             color: #211e1e;
@@ -47,39 +48,71 @@
         ">
       <br />
       <hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="画心.mp3" download="画心.mp3" class="liu"><b>画心</b></a>
-        <audio src="画心.mp3" controls="" loop="" class="chang"></audio>
+        <a href="音频/画心.mp3" download="画心.mp3" class="liu"><b>画心</b></a>
+        <audio src="音频/画心.mp3" controls="" loop="" class="chang"></audio>
       </hezi>
       <br />
       <hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="浮诛.mp3" download="浮诛.mp3" class="liu"><b>浮诛</b></a>
-        <audio src="浮诛.mp3" controls="" loop="" class="chang"></audio>
+        <a href="音频/浮诛.mp3" download="浮诛.mp3" class="liu"><b>浮诛</b></a>
+        <audio src="音频/浮诛.mp3" controls="" loop="" class="chang"></audio>
       </hezi>
       <br />
       <hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="大悲咒.mp3" download="大悲咒.mp3" class="liu"><b>大悲咒</b></a>
-        <audio src="大悲咒.mp3" controls="" loop="" class="chang"></audio>
+        <a href="音频/大悲咒.mp3" download="大悲咒.mp3" class="liu"><b>大悲咒</b></a>
+        <audio src="音频/大悲咒.mp3" controls="" loop="" class="chang"></audio>
       </hezi>
       <br />
       <hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="长生诀.mp3" download="长生诀.mp3" class="liu"><b>长生诀</b></a>
-        <audio src="长生诀.mp3" controls="" loop="" class="chang"></audio>
+        <a href="音频/长生诀.mp3" download="长生诀.mp3" class="liu"><b>长生诀</b></a>
+        <audio src="音频/长生诀.mp3" controls="" loop="" class="chang"></audio>
       </hezi>
       <br />
       <hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href=音频/琵琶行.mp3" download="琵琶行.mp3" class="liu"><b>琵琶行</b></a>
-        <audio src="琵琶行.mp3" controls="" loop="" class="chang"></audio>
+        <a href="音频/琵琶行.mp3" download="琵琶行.mp3" class="liu"><b>琵琶行</b></a>
+        <audio src="音频/琵琶行.mp3" controls="" loop="" class="chang"></audio>
       </hezi><br />
       <hezi>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="沙漠骆驼.mp3" download="沙漠骆驼.mp3" class="liu"><b>沙漠骆驼</b></a>
-        <audio src="沙漠骆驼.mp3" controls="" loop="" class="chang"></audio>
+        <a href="音频/沙漠骆驼.mp3" download="沙漠骆驼.mp3" class="liu"><b>沙漠骆驼</b></a>
+        <audio src="音频/沙漠骆驼.mp3" controls="" loop="" class="chang"></audio>
       </hezi><br />
-      <hezi><a href="十年人间DJ.mp3" download="十年人间DJ.mp3" class="liu"><b>十年人间DJ</b></a>
-        <audio src="十年人间DJ.mp3" controls="" loop="" class="chang"></audio>
+      <hezi><a href="音频/十年人间DJ.mp3" download="十年人间DJ.mp3" class="liu"><b>十年人间DJ</b></a>
+        <audio src="音频/十年人间DJ.mp3" controls="" loop="" class="chang"></audio>
       </hezi>
       <br />
     </zhuneirong>
-    <br />
+    <weiye style="
+    display: flex;
+    height: 105px;
+    background-color: #bbbbbb;
+    border: 3px solid rgb(68, 68, 68);
+    align-items: center;
+    justify-content: center;">
+
+      <style>
+        .dropdown {
+          position: relative;
+          display: inline-block;
+        }
+
+        .dropdown-content {
+          display: none;
+          position: absolute;
+          background-color: #8b8b8b;
+          min-width: 80px;
+          box-shadow: 0px 8px 16px 0px rgba(206, 33, 33, 0.2);
+          padding: 6px 6px;
+        }
+
+        .dropdown:hover .dropdown-content {
+          display: block;
+        }
+      </style>
+      <hezi class="dropdown">
+        版权声明
+        <div class="dropdown-content" style="font-size: 20px;">
+          偷的&#128517;</div>
+      </hezi>
+    </weiye>
     <style>
       .liu {
         color: #ffffff;
