--- a/听.html
+++ b/听.html
@@ -48,35 +48,35 @@
         ">
       <br />
       <hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="音频/画心.mp3" download="画心.mp3" class="liu"><b>画心</b></a>
-        <audio src="音频/画心.mp3" controls="" loop="" class="chang"></audio>
+        <a href="画心.mp3" download="画心.mp3" class="liu"><b>画心</b></a>
+        <audio src="画心.mp3" controls="" loop="" class="chang"></audio>
       </hezi>
       <br />
       <hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="音频/浮诛.mp3" download="浮诛.mp3" class="liu"><b>浮诛</b></a>
-        <audio src="音频/浮诛.mp3" controls="" loop="" class="chang"></audio>
+        <a href="浮诛.mp3" download="浮诛.mp3" class="liu"><b>浮诛</b></a>
+        <audio src="浮诛.mp3" controls="" loop="" class="chang"></audio>
       </hezi>
       <br />
       <hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="音频/大悲咒.mp3" download="大悲咒.mp3" class="liu"><b>大悲咒</b></a>
-        <audio src="音频/大悲咒.mp3" controls="" loop="" class="chang"></audio>
+        <a href="大悲咒.mp3" download="大悲咒.mp3" class="liu"><b>大悲咒</b></a>
+        <audio src="大悲咒.mp3" controls="" loop="" class="chang"></audio>
       </hezi>
       <br />
       <hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="音频/长生诀.mp3" download="长生诀.mp3" class="liu"><b>长生诀</b></a>
-        <audio src="音频/长生诀.mp3" controls="" loop="" class="chang"></audio>
+        <a href="长生诀.mp3" download="长生诀.mp3" class="liu"><b>长生诀</b></a>
+        <audio src="长生诀.mp3" controls="" loop="" class="chang"></audio>
       </hezi>
       <br />
       <hezi>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="音频/琵琶行.mp3" download="琵琶行.mp3" class="liu"><b>琵琶行</b></a>
-        <audio src="音频/琵琶行.mp3" controls="" loop="" class="chang"></audio>
+        <a href="琵琶行.mp3" download="琵琶行.mp3" class="liu"><b>琵琶行</b></a>
+        <audio src="琵琶行.mp3" controls="" loop="" class="chang"></audio>
       </hezi><br />
       <hezi>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="音频/沙漠骆驼.mp3" download="沙漠骆驼.mp3" class="liu"><b>沙漠骆驼</b></a>
-        <audio src="音频/沙漠骆驼.mp3" controls="" loop="" class="chang"></audio>
+        <a href="沙漠骆驼.mp3" download="沙漠骆驼.mp3" class="liu"><b>沙漠骆驼</b></a>
+        <audio src="沙漠骆驼.mp3" controls="" loop="" class="chang"></audio>
       </hezi><br />
-      <hezi><a href="音频/十年人间DJ.mp3" download="十年人间DJ.mp3" class="liu"><b>十年人间DJ</b></a>
-        <audio src="音频/十年人间DJ.mp3" controls="" loop="" class="chang"></audio>
+      <hezi><a href="十年人间DJ.mp3" download="十年人间DJ.mp3" class="liu"><b>十年人间DJ</b></a>
+        <audio src="十年人间DJ.mp3" controls="" loop="" class="chang"></audio>
       </hezi>
       <br />
     </zhuneirong>
