--- a/index.html
+++ b/index.html
@@ -22,6 +22,20 @@
                 inset -1px -1px 5px rgba(0, 0, 0, 0.75);
         }
 
+        .txyinying {
+            box-shadow: 8px 8px 5px -5px rgba(39, 97, 99, 0.55),
+                inset 1px 1px 3px rgba(142, 204, 240, 0.75),
+                -1px -1px 15px rgba(196, 226, 233, 0.55),
+                inset -1px -1px 5px rgba(0, 0, 0, 0.75);
+        }
+
+        .btyinying {
+            box-shadow: 10px 10px 5px -5px rgba(46, 118, 139, 0.55),
+                inset 2px 2px 3px rgba(123, 219, 206, 0.75),
+                -1px -1px 10px rgba(49, 186, 196, 0.55),
+                inset -1px -1px 5px rgba(0, 0, 0, 0.75);
+        }
+
         .flex {
             display: flex;
         }
@@ -62,11 +76,27 @@
         .daohang {
             padding: 10px 10px;
             border-bottom: 3px solid #666666;
+            font-size: 18px;
+            color: rgb(80, 7, 7);
+        }
+
+        .biaoti {
+            background-color: rgb(119, 218, 218);
+            border-radius: 5px;
+            width: 208px;
+            height: 48px;
+            margin: auto;
+            padding-left: 15px;
+            padding-right: 15px;
+            align-items: center;
+            justify-content: center;
+            color: rgb(0, 0, 0);
             font-size: 20px;
+
         }
 
         /* 当屏幕小于600px时要改变的css */
-        @media (max-width:600px) {
+        @media (max-width:100px) {
             .cebianlan {
                 display: none;
             }
@@ -89,40 +119,71 @@
             }
         }
 
+        a {
+            text-decoration: none;
+            color: #270844;
+        }
+
         .neironglan::-webkit-scrollbar {
             display: none;
         }
     </style>
+
 </head>
 
 <body class="flex">
     <!--侧边栏-->
-    <div style="width: 200px; z-index: 2;" class="cebianlan baise zuo xia yinying">
+    <div style="width: 120px; z-index: 2;" class="cebianlan baise zuo xia yinying">
         <!--头像栏-->
         <div class="flex "
             style="padding: 10px;align-items: center;justify-content: center;border-bottom: 5px solid rgb(230, 230, 230)">
-            <img src="头像.jpg" width="40px" height="40px" style="
-            border-radius: 10px;" alt="头像">
+            <img src="图片/头像.jpg" width="40px" height="40px" style="
+            border-radius: 10px;" class="txyinying" alt="头像">
             <br>
-            <h3>&nbsp;&nbsp;&nbsp;羽</h3>
+            <h3>&nbsp;&nbsp;羽</h3>
         </div>
         <!--导航栏-->
         <div class="flex1">
-            <div class="daohang"><b>导航</b></div>
-            <div class="daohang"><b>导航</b></div>
-            <div class="daohang"><b>导航</b></div>
-            <div class="daohang"><b>导航</b></div>
-            <div class="daohang"><b>导航</b></div>
-            <div class="daohang"><b>导航</b></div>
-            <div class="daohang"><b>导航</b></div>
-            <div class="daohang"><b>导航</b></div>
-            <div class="daohang"><b>导航</b></div>
+            <a href="听.html">
+                <div class="daohang"><b>音乐</b></div>
+            </a>
+            <a href="天空.html">
+                <div class="daohang"><b>天空</b></div>
+            </a>
+            <a href="0.html">
+                <div class="daohang"><b>神经资源</b></div>
+            </a>
+            <a href="">
+                <div class="daohang"><b>导航</b></div>
+            </a>
+            <a href="">
+                <div class="daohang"><b>导航</b></div>
+            </a>
+            <a href="">
+                <div class="daohang"><b>导航</b></div>
+            </a>
+            <a href="">
+                <div class="daohang"><b>导航</b></div>
+            </a>
+            <a href="">
+                <div class="daohang"><b>导航</b></div>
+            </a>
+            <a href="">
+                <div class="daohang"><b>导航</b></div>
+            </a>
         </div>
     </div>
     <!--主区域-->
     <div class="flex1 flex column">
         <!--头部栏-->
-        <div style="height: 85px; z-index:1;" class="baise zuo you yinying"></div>
+        <div style="height: 85px; z-index:1;" class="baise zuo you yinying">
+            <!--文字-->
+            <div class="biaoti btyinying">
+                <a href="页面.html">
+                    <h3 class="zuo you" style="padding-top: 7px;">12345,上山打老虎</h3>
+                </a>
+            </div>
+        </div>
         <!--内容区-->
         <div style="overflow: auto;" class="neironglan flex1 flex xia">
             <!--左区-->
