--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <!--头像栏-->
         <div class="flex "
             style="padding: 10px;align-items: center;justify-content: center;border-bottom: 5px solid rgb(230, 230, 230)">
-            <img src="图片/头像.jpg" width="40px" height="40px" style="
+            <img src="头像.jpg" width="40px" height="40px" style="
             border-radius: 10px;" class="txyinying" alt="头像">
             <br>
             <h3>&nbsp;&nbsp;羽</h3>
