--- a/新.html
+++ b/新.html
@@ -11,7 +11,7 @@
     <div class="flex juzhong">
         <div style="
             display: flex;">
-            <img src="图片/头像.jpg" alt="图片" style="
+            <img src="头像.jpg" alt="头像" style="
             width: 50px;
             height: 50px;
             border-radius: 8px;
