--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
             <a href="0.html">
                 <div class="daohang"><b>神经资源</b></div>
             </a>
-            <a href="点赞2.html">
-                <div class="daohang"><b>点赞</b></div>
+            <a href="">
+                <div class="daohang"><b>导航</b></div>
             </a>
             <a href="">
                 <div class="daohang"><b>导航</b></div>
