--- a/新.html
+++ b/新.html
@@ -8,10 +8,10 @@
 </head>
 
 <body>
-    <div class="flex juzhong">
+    <div class="flex juzhong txyinyingz">
         <div style="
             display: flex;">
-            <img src="头像.jpg" alt="头像" style="
+            <img src="图片/头像.jpg" alt="头像" class="txyinying" style="
             width: 50px;
             height: 50px;
             border-radius: 8px;
@@ -21,8 +21,8 @@
             <h1>Hello!</h1>
         </div>
     </div>
-    <div class="flex juzhong">
-        <input type="text" style="
+    <div class="flex juzhong yiny">
+        <input type="text" class="wzkyinying" style="
     width: 800px;
     height:35px;
     font-size: 20px;
@@ -42,100 +42,100 @@
     margin-top: 30px;">
         <!--标题-->
         <div class="flex juzhong">
-            <div class="flex juzhong yanse1 hezi2">
-                <h1>字母表</h1>
+            <div class="flex juzhong yinying yanse1 hezi2" style="margin-bottom: 10px;">
+                <h1 class="wzyinying">字母表</h1>
             </div>
         </div>
-        <div class="flex hang juzhong">
-            <div class="flex juzhong yanse hezi">
-                <h1>A</h1>
+        <div class="flex hang juzhong yinying">
+            <div class="flex juzhong yinying yanse hezi">
+                <h1 class="wzyinying">A</h1>
             </div><br>
-            <div class="flex juzhong yanse hezi">
-                <h1>B</h1>
+            <div class="flex juzhong yinying yanse hezi">
+                <h1 class="wzyinying">B</h1>
             </div><br>
-            <div class="flex juzhong yanse hezi">
-                <h1>C</h1>
+            <div class="flex juzhong yinying yanse hezi">
+                <h1 class="wzyinying">C</h1>
             </div><br>
-            <div class="flex juzhong yanse hezi">
-                <h1>D</h1>
+            <div class="flex juzhong yinying yanse hezi">
+                <h1 class="wzyinying">D</h1>
             </div><br>
-            <div class="flex juzhong yanse hezi">
-                <h1>E</h1>
+            <div class="flex juzhong yinying yanse hezi">
+                <h1 class="wzyinying">E</h1>
             </div><br>
-            <div class="flex juzhong yanse hezi">
-                <h1>F</h1>
+            <div class="flex juzhong yinying yanse hezi">
+                <h1 class="wzyinying">F</h1>
             </div><br>
-            <div class="flex juzhong yanse hezi">
-                <h1>G</h1>
-            </div><br>
-        </div>
-        <div class="flex hang juzhong">
-            <div class="flex juzhong yanse hezi">
-                <h1>H</h1>
-            </div><br>
-            <div class="flex juzhong yanse hezi">
-                <h1>I</h1>
-            </div><br>
-            <div class="flex juzhong yanse hezi">
-                <h1>G</h1>
-            </div><br>
-            <div class="flex juzhong yanse hezi">
-                <h1>K</h1>
-            </div><br>
-            <div class="flex juzhong yanse hezi">
-                <h1>L</h1>
-            </div><br>
-            <div class="flex juzhong yanse hezi">
-                <h1>M</h1>
-            </div><br>
-            <div class="flex juzhong yanse hezi">
-                <h1>N</h1>
+            <div class="flex juzhong yinying yanse hezi">
+                <h1 class="wzyinying">G</h1>
             </div><br>
         </div>
-        <div class="flex hang juzhong">
-            <div class="flex juzhong yanse hezi">
-                <h1>O</h1>
+        <div class="flex hang juzhong yinying">
+            <div class="flex juzhong yinying yanse hezi">
+                <h1 class="wzyinying">H</h1>
             </div><br>
-            <div class="flex juzhong yanse hezi">
-                <h1>P</h1>
+            <div class="flex juzhong yinying yanse hezi">
+                <h1 class="wzyinying">I</h1>
             </div><br>
-            <div class="flex juzhong yanse hezi">
-                <h1>Q</h1>
+            <div class="flex juzhong yinying yanse hezi">
+                <h1 class="wzyinying">G</h1>
             </div><br>
-            <div class="flex juzhong yanse hezi">
-                <h1>R</h1>
+            <div class="flex juzhong yinying yanse hezi">
+                <h1 class="wzyinying">K</h1>
             </div><br>
-            <div class="flex juzhong yanse hezi">
-                <h1>S</h1>
+            <div class="flex juzhong yinying yanse hezi">
+                <h1 class="wzyinying">L</h1>
             </div><br>
-            <div class="flex juzhong yanse hezi">
-                <h1>T</h1>
+            <div class="flex juzhong yinying yanse hezi">
+                <h1 class="wzyinying">M</h1>
+            </div><br>
+            <div class="flex juzhong yinying yanse hezi">
+                <h1 class="wzyinying">N</h1>
             </div><br>
         </div>
-        <div class="flex hang juzhong">
-            <div class="flex juzhong yanse hezi">
-                <h1>U</h1>
+        <div class="flex hang juzhong yinying">
+            <div class="flex juzhong yinying yanse hezi">
+                <h1 class="wzyinying">O</h1>
             </div><br>
-            <div class="flex juzhong yanse hezi">
-                <h1>V</h1>
+            <div class="flex juzhong yinying yanse hezi">
+                <h1 class="wzyinying">P</h1>
             </div><br>
-            <div class="flex juzhong yanse hezi">
-                <h1>W</h1>
+            <div class="flex juzhong yinying yanse hezi">
+                <h1 class="wzyinying">Q</h1>
             </div><br>
-            <div class="flex juzhong yanse hezi">
-                <h1>X</h1>
+            <div class="flex juzhong yinying yanse hezi">
+                <h1 class="wzyinying">R</h1>
             </div><br>
-            <div class="flex juzhong yanse hezi">
-                <h1>Y</h1>
+            <div class="flex juzhong yinying yanse hezi">
+                <h1 class="wzyinying">S</h1>
             </div><br>
-            <div class="flex juzhong yanse hezi">
-                <h1>Z</h1>
+            <div class="flex juzhong yinying yanse hezi">
+                <h1 class="wzyinying">T</h1>
+            </div><br>
+        </div>
+        <div class="flex hang juzhong yinying">
+            <div class="flex juzhong yinying yanse hezi">
+                <h1 class="wzyinying">U</h1>
+            </div><br>
+            <div class="flex juzhong yinying yanse hezi">
+                <h1 class="wzyinying">V</h1>
+            </div><br>
+            <div class="flex juzhong yinying yanse hezi">
+                <h1 class="wzyinying">W</h1>
+            </div><br>
+            <div class="flex juzhong yinying yanse hezi">
+                <h1 class="wzyinying">X</h1>
+            </div><br>
+            <div class="flex juzhong yinying yanse hezi">
+                <h1 class="wzyinying">Y</h1>
+            </div><br>
+            <div class="flex juzhong yinying yanse hezi">
+                <h1 class="wzyinying">Z</h1>
             </div><br>
         </div>
     </div>
     <!--dianzan-->
     <div class="flex">
-        <button id="dzs" onclick="dianzan()" class="yanse2" style="
+        <button id="dzs" onclick="dianzan()" class="yanse2 yinying" style="
         font-size: 36px;
         border-radius: 10px;
         margin-top: -60px;
@@ -172,6 +172,26 @@
             width: 120px;
             height: 60px;
             border-radius: 5px;
+        }
+        .txyinying {
+            box-shadow: 8px 8px 5px -5px rgba(39, 97, 99, 0.55),
+                inset 1px 1px 3px rgba(169, 185, 255, 0.75),
+                -1px -1px 15px rgba(196, 226, 233, 0.55),
+                inset -1px -1px 5px rgba(0, 0, 0, 0.75);
+        }
+        .yinying {
+            box-shadow: 10px 10px 5px -5px rgba(46, 118, 139, 0.55),
+                inset 2px 2px 3px rgba(39, 158, 255, 0.75),
+                -1px -1px 10px rgba(12, 217, 231, 0.55),
+                inset -1px -1px 5px rgba(250, 67, 67, 0.75);
+        }
+        .wzyinying {
+            text-shadow: -5px -5px 10px rgba(248, 107, 118, 0.55),
+                5px 5px 10px rgba(111, 101, 255, 0.55)
+        }
+        .wzkyinying {
+            box-shadow: 5px 5px 5px -3px rgba(143, 163, 255, 0.55),
+                inset -1px -1px 5px rgba(43, 91, 248, 0.75);
         }
 
         .yanse {
