--- a/新.html
+++ b/新.html
@@ -21,23 +21,25 @@
             <h1>Hello!</h1>
         </div>
     </div>
-    <div class="flex juzhong yiny">
+    <div class="flex juzhong">
         <input type="text" class="wzkyinying" style="
     width: 800px;
     height:35px;
     font-size: 20px;
     border-radius: 5px;
+    box-sizing: border-box;
+    border: none;
     color: rgb(255, 7, 7);
     background:linear-gradient(rgb(255, 157, 157),rgb(255, 160, 180),rgb(149, 184, 223),rgb(135, 135, 253));
-    text-align: center;
-">
+    text-align: center;">
+        <button class="sousuo">搜索</button>
     </div>
     <!--内容区-->
     <div class="flex juzhong column" style="
     background:linear-gradient( 90deg, rgb(255, 70, 70),rgba(243, 38, 38, 0.726),rgb(69, 126, 233),rgb(49, 49, 236));
     width: 800px;
     height: 500px;
-    border-radius: 10px;
+    border-radius: 60px;
     margin: 100px;
     margin-top: 30px;">
         <!--标题-->
@@ -46,7 +48,9 @@
                 <h1 class="wzyinying">字母表</h1>
             </div>
         </div>
-        <div class="flex hang juzhong yinying">
+        <div class="flex hang juzhong yinying"  style="
+        border-top-right-radius: 25px;
+        border-top-left-radius: 25px;">
             <div class="flex juzhong yinying yanse hezi">
                 <h1 class="wzyinying">A</h1>
             </div><br>
@@ -112,7 +116,9 @@
                 <h1 class="wzyinying">T</h1>
             </div><br>
         </div>
-        <div class="flex hang juzhong yinying">
+        <div class="flex hang juzhong yinying" style="
+        border-bottom-left-radius: 25px;
+        border-bottom-right-radius: 25px;">
             <div class="flex juzhong yinying yanse hezi">
                 <h1 class="wzyinying">U</h1>
             </div><br>
@@ -173,25 +179,29 @@
             height: 60px;
             border-radius: 5px;
         }
+
         .txyinying {
             box-shadow: 8px 8px 5px -5px rgba(39, 97, 99, 0.55),
                 inset 1px 1px 3px rgba(169, 185, 255, 0.75),
                 -1px -1px 15px rgba(196, 226, 233, 0.55),
                 inset -1px -1px 5px rgba(0, 0, 0, 0.75);
         }
+
         .yinying {
             box-shadow: 10px 10px 5px -5px rgba(46, 118, 139, 0.55),
                 inset 2px 2px 3px rgba(39, 158, 255, 0.75),
                 -1px -1px 10px rgba(12, 217, 231, 0.55),
                 inset -1px -1px 5px rgba(250, 67, 67, 0.75);
         }
+
         .wzyinying {
             text-shadow: -5px -5px 10px rgba(248, 107, 118, 0.55),
                 5px 5px 10px rgba(111, 101, 255, 0.55)
         }
+
         .wzkyinying {
-            box-shadow: 5px 5px 5px -3px rgba(143, 163, 255, 0.55),
-                inset -1px -1px 5px rgba(43, 91, 248, 0.75);
+            box-shadow: 3px 3px 3px -3px rgba(170, 186, 255, 0.55),
+                inset -1px -1px 5px rgba(60, 69, 99, 0.75);
         }
 
         .yanse {
@@ -225,6 +235,20 @@
             width: 600px;
             height: 60px;
 
+        }
+
+        .sousuo {
+            width: 60px;
+            height: 35px;
+            border-top-left-radius: 20px;
+            border-bottom-right-radius: 20px;
+            border-top-right-radius: 8px;
+            border-bottom-left-radius: 8px;
+            font-size: 18px;
+            margin-left: 5px;
+            background: linear-gradient(rgb(18, 204, 173), blueviolet);
+            border: none;
+            color: #000000;
         }
     </style>
 </body>
