--- a/键盘.html
+++ b/键盘.html
@@ -466,7 +466,7 @@
                         <div class="liu flex">
                             <!--左-->
                             <div class="di flex jg juzhong"><b>Ctrl</b></div>
-                            <div class="ks flex jg juzhong"><img src="图片/Windows.jpg" alt="Win" style="
+                            <div class="ks flex jg juzhong"><img src="Windows.jpg" alt="Win" style="
                                     width: 50%;
                                     height: 50%;">
                             </div>
@@ -476,7 +476,7 @@
                             <div class="ks flex jg juzhong"><img src="图片/Windows.jpg" alt="Win" style="
                                                                 width: 50%;
                                                                 height: 50%;"></div>
-                            <div class="ks flex jg juzhong"><img src="图片/右键.jpg" alt="Win" style="
+                            <div class="ks flex jg juzhong"><img src="右键.jpg" alt="RMB" style="
                                                                                             width: 50%;
                                                                                             height: 50%;"></div>
                             <div class="di flex juzhong zjg"><b>Ctrl</b></div>
