--- a/index.html
+++ b/index.html
@@ -150,14 +150,14 @@
             <a href="天空.html">
                 <div class="daohang"><b>天空</b></div>
             </a>
+            <a href="键盘.html">
+                <div class="daohang"><b>键盘</b></div>
+            </a>
             <a href="新.html">
                 <div class="daohang"><b>字母表</b></div>
             </a>
             <a href="0.html">
                 <div class="daohang"><b>神经资源</b></div>
-            </a>
-            <a href="">
-                <div class="daohang"><b>导航</b></div>
             </a>
             <a href="">
                 <div class="daohang"><b>导航</b></div>
