--- a/键盘.html
+++ b/键盘.html
@@ -473,7 +473,7 @@
                             <div class="di flex jg juzhong"><b>Alt</b></div>
                             <div class="kg flex jg juzhong"></div>
                             <div class="di flex jg juzhong"><b>Alt</b></div>
-                            <div class="ks flex jg juzhong"><img src="图片/Windows.jpg" alt="Win" style="
+                            <div class="ks flex jg juzhong"><img src="Windows.jpg" alt="Win" style="
                                                                 width: 50%;
                                                                 height: 50%;"></div>
                             <div class="ks flex jg juzhong"><img src="右键.jpg" alt="RMB" style="
