--- a/二维码.html
+++ b/二维码.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>个人微信</title>
     <style>
         body {
             display: flex;
@@ -659,7 +659,7 @@
                         <div class="kong"></div>
                         <div class="kong"></div>
                     </div>
-                    <div class="img"><img src="../图片/头像.jpg" alt="头像"></div>
+                    <div class="img"><img src="头像.jpg" alt="头像"></div>
                     <div class="box3">
                         <div class="kong"></div>
                         <div class="kong"></div>
