--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <!--文字-->
             <div class="biaoti btyinying">
                 <a href="页面.html">
-                    <h3 class="zuo you" style="padding-top: 7px;">12345,上山打老虎</h3>
+                    <h3 class="zuo you" style="padding-top: 7px;">12345</h3>
                 </a>
             </div>
         </div>
