--- a/2.html
+++ b/2.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	<title>神经资源管理器</title>
+	<title>资源管理器</title>
  <style>
     body{
       height:100vh;
@@ -12,8 +12,8 @@
   <body>	
 	  <div style="
 		  text-align:center">
-	<h1>大脑停止运行</h1>
-	<h3 style="font-size:30px">已死亡</h3> 
+	<h1>页面关闭</h1>
+	<h3 style="font-size:30px">已停止</h3> 
         <audio src="大悲咒.MP3"autoplay></audio>
   </body>
 </html>
