--- a/4.html
+++ b/4.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	<title>神经资源管理器</title>
+	<title>资源管理器</title>
   </head>
   <body>
   <div style="
@@ -11,7 +11,7 @@
      padding: 20px;
      font-size:12px;">
 	<h1>我命由我不由天！</h1>
-	<p>下载硬件，重组大脑！</p>  
+	<p>下载插件，修复页面！</p>  
  </div>
  <div style="
  text-align:center">
