--- a/3.html
+++ b/3.html
@@ -7,10 +7,10 @@
   <body>
 	  <div style="
 		  text-align:center">
-	<h1 style="color:red">大脑修复中</h1>
-	<h3 style="color:blue">大脑修复失败</h3>
-    <p style="font-size:10px">请关闭器官↓</p> 
-    <a href="2.html"style="color:blue;text-decoration:none">→关闭器官</a>
+	<h1 style="color:red">页面修复中</h1>
+	<h3 style="color:blue">页面修复失败</h3>
+    <p style="font-size:10px">请关闭↓</p> 
+    <a href="2.html"style="color:blue;text-decoration:none">→关闭页面</a>
     <p>
      <a href="4.html"style="color:red;text-decoration:none">→逆天改命</a>
   </body>
