--- a/3.html
+++ b/3.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	<title>神经资源管理器</title>
+	<title>资源管理器</title>
   </head>
   <body>
 	  <div style="
