--- a/0.html
+++ b/0.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	<title>神经资源管理器</title>
+	<title>资源管理器</title>
  <style>
  a{text-decoration:none}
  </style>
@@ -10,7 +10,7 @@
   <body>
 <div style="
 	text-align:center">
-	<h1 style="color:red">大脑出现故障</h1>
+	<h1 style="color:red">页面出现故障</h1>
 	<h3 style="color:blue">是否修复？</h3>  
  <a href="1.html">→是</a>
  <p>
