--- a/1.html
+++ b/1.html
@@ -9,7 +9,7 @@
 		  text-align:center">
 	<h1 style="color:red">页面修复中</h1>
 	<h3 style="color:blue">页面未响应</h3> 
-    <p style="font-size:10px">是否关闭页面？</p>
+    <p style="font-size:10px">请耐心等待...</p>
  <a href="2.html"style="text-decoration:none;color:blue">→关闭页面</a>
  <p><a href="3.html"style="text-decoration:none;color:blue">→等待页面响应</a><p>
   </body>
