--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             margin: 0;
             height: 100vh;
             background-color: #eee;
+            text-align:center;
         }
 
         /* * {
@@ -157,7 +158,7 @@
                 <div class="daohang"><b>字母表</b></div>
             </a>
             <a href="0.html">
-                <div class="daohang"><b>神经资源</b></div>
+                <div class="daohang"><b>...</b></div>
             </a>
             <a href="">
                 <div class="daohang"><b>导航</b></div>
