--- a/听.html
+++ b/听.html
@@ -95,6 +95,7 @@
         }
 
         .dropdown-content {
+          border-raduis:8px;
           display: none;
           position: absolute;
           background-color: #8b8b8b;
@@ -110,7 +111,7 @@
       <hezi class="dropdown">
         版权声明
         <div class="dropdown-content" style="font-size: 20px;">
-          偷的&#128517;</div>
+          没有&#128517;</div>
       </hezi>
     </weiye>
     <style>
