--- a/听.html
+++ b/听.html
@@ -95,7 +95,6 @@
         }
 
         .dropdown-content {
-          border-raduis:8px;
           display: none;
           position: absolute;
           background-color: #8b8b8b;
@@ -110,7 +109,7 @@
       </style>
       <hezi class="dropdown">
         版权声明
-        <div class="dropdown-content" style="font-size: 20px;">
+        <div class="dropdown-content" style="font-size: 20px;border-raduis:8px;">
           没有&#128517;</div>
       </hezi>
     </weiye>
