--- a/二维码.html
+++ b/二维码.html
@@ -1544,7 +1544,7 @@
                             <div class="kong"></div>
                         </div>
                     </div>
-                    <div class="img"><img src="头像.jpg" alt="头像"></div>
+                    <div class="img"><img src="tx.jpg" alt="头像"></div>
                     <div class="box3">
                         <div class="zhan">
                             <div class="kong"></div>
